<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/home_button_txt_des"
            android:contextClickable="false"
            android:onClick="onHomeClick"
            android:src="@drawable/smallerhomebutton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/hunger_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewHungPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/health_percentage"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewHapiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/happiness_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewHapPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/hap_percentage"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/EmotionImage"
            android:layout_width="188dp"
            android:layout_height="128dp"
            android:layout_marginLeft="200dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/PetImage"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/pet_txt_des"
            app:srcCompat="@drawable/biggeregg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/LoveButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/love_buttonfeed_button_txt_des"
            android:src="@drawable/lovebutton2" />

        <ImageButton
            android:id="@+id/FeedButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/feed_button_txt_des"
            android:src="@drawable/feedbutton" />

        <ImageButton
            android:id="@+id/CleanButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/clean_button_txt_des"
            android:src="@drawable/cleanbutton" />

        <ImageButton
            android:id="@+id/PlayButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/play_buttonfeed_button_txt_des"
            android:src="@drawable/playbutton" />

    </LinearLayout>

</LinearLayout>