<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/LightGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/home_button_txt_des"
            android:contextClickable="false"
            android:onClick="onHomeClick"
            android:padding="4dp"
            android:src="@drawable/smallerhomebutton" />

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:padding="4dp"
            android:text="@string/text_view_info"
            android:textSize="45dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/textViewBackColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:text="@string/text_view_back_colors"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="4dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="4dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="4dp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/TextViewTitleAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:padding="4dp"
            android:text="@string/text_view_app_des"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/textViewAppWel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:text="@string/text_view_welcome"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:text="@string/text_view_about"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewCaring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:text="@string/text_view_caring"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewMoniter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:text="@string/text_view_moniter"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewFresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dotgothic16"
            android:text="@string/text_view_fresh"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>