<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreen"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/dotgothic16"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColorLink="@color/black"
        android:textSize="60sp" />

    <ImageView
        android:id="@+id/imageViewEgg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/biggeregg" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/dotgothic16"
        android:onClick="onStartClick"
        android:text="@string/button_start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/dotgothic16"
        android:onClick="onInfoClick"
        android:text="@string/button_Info"
        android:textSize="20sp" />

</LinearLayout>